--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# .env - SIMPLIFIED TEMPLATE
+# .env - UPDATED WITH COMPANY SERVICE
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
@@ -18,8 +18,9 @@ DEFAULT_CURRENCY=IDR
 DEFAULT_TIMEZONE=Asia/Jakarta
 TAX_RATE_PPN=11.00
 
-# Service URLs
+# Service URLs - UPDATED WITH COMPANY SERVICE
 USER_SERVICE_URL=http://localhost:8001
+COMPANY_SERVICE_URL=http://localhost:8011
 ACCOUNT_SERVICE_URL=http://localhost:8002
 TRANSACTION_SERVICE_URL=http://localhost:8003
 INVOICE_SERVICE_URL=http://localhost:8004
